<resources>
    <string name="app_name">Exercise_1</string>
    <string name="roll">Roll</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate">BMI Berechnen</string>
    <string name="titelText">Berechne deinen BMI</string>
    <string name="groeßeText">Größe in Meter eingeben: z.B. 1.8</string>
    <string name="gewichtText">Gewicht in kg eingeben z.B. 80</string>
    <string name="bg_color_good">bg_color</string>
    <string name="good_result_header">Dein BMI beträgt:</string>
    <string name="bmi_ausgabe">bmi_ausgabe_hier_reinmachen</string>
    <string name="good_result_add_message">Perfektes Körpergewicht!</string>
    <string name="go_back_button">Erneut Berechnen</string>
    <string name="bad_result_background">bg_color</string>
    <string name="bad_result_add_message">VIel zu viel Körpergewicht!!!</string>
    <string name="go_back_from_bad_button">Erneut Berechnen!</string>
    <string name="less_bad_add_message">Zu wenig Körpergewicht!</string>
</resources>
