<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.result.BMIBadResult">

        <ImageView
            android:id="@+id/bg_color_bad_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/bad_result_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@color/bg_color_bad" />

        <TextView
            android:id="@+id/bad_result_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/good_result_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bg_color_bad_result"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/bad_result_bmi_ausgabe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bmi_ausgabe"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bad_result_header"
            tools:text="@string/bmi_ausgabe" />

        <TextView
            android:id="@+id/bad_result_additional_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bad_result_add_message"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bad_result_bmi_ausgabe" />

        <Button
            android:id="@+id/go_back_from_bad_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/go_back_from_bad_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bad_result_additional_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>